fix alignment of overlapping image component

--- a/client/components/propensity-messaging/_promo-unit.scss
+++ b/client/components/propensity-messaging/_promo-unit.scss
@@ -1,7 +1,7 @@
 .promo-unit-msg {
   background-color: #005277;
   color: white;
-  padding: 10px 0 20px 0;
+  padding: 10px 0 60px 0;
   &__related-content-header {
     overflow: hidden;
     text-align: center;
@@ -27,9 +27,6 @@
     text-align: center;
     font-weight: bold;
     padding: 0 20% 0 20%;}
-  &__related-content-items {
-    width: 82%;
-    margin: auto auto 60px auto;}
   &__related-content-tag {
     font-weight: bold;
     font-size: 20px;
@@ -37,21 +34,20 @@
     color: #F47985;}
   &__related-content-headline {
     margin: 0;
+    margin-bottom: 30px;
     font-size: 2em;
     font-weight: lighter;
     font-family: FinancierDisplayWeb;}
   &__related-content-image {
     width: 100%;}
   &__best-from-ft {
-    padding-bottom: 20px;}
+    padding-bottom: 35px;}
   &__best-from-ft-heading {
     overflow: hidden;
-    padding-left: 10%;
     font-family: FinancierDisplayWeb;
     margin: 0;
     font-size: 30px;
-    &:before,
-    &:after {
+    &:before {
       background-color: white;
       content: "";
       display: inline-block;
@@ -59,21 +55,17 @@
       position: relative;
       vertical-align: middle;
       overflow: hidden;
-      width: 50%;}
-    &:before {
-      right: 0.5em;
-      margin-left: -50%;}
-    &:after {
-      width: 100%;
-      left: 0.5em;
-      margin-right: -50%;}}
+      width: 50%;
+      right: 5em;
+      margin-left: 0%;}}
   &__best-from-ft-item {
     border-bottom: 1px solid white;
-    margin: 20px 10% 0 10%;
+    padding: 50px 0 50px 0;
     text-align: center;}
   &__best-from-ft-stream-name {
     font-weight: bold;
     margin-bottom: 10px;
+    margin-top: 0px;
     font-size: 3em;}
   &__best-from-ft-stream-description {
     font-size: 25px;
@@ -84,25 +76,23 @@
   &__best-from-ft-item-overlapping-images {
     position: relative;
     height: 217px;
-    width: 435px;
-    }
+    width: 435px;}
   &__best-from-ft-item-lil-pic {
     position: absolute;
     bottom: 40px;
     left: 0;
-    bottom: 0;
-  }
+    bottom: 0;}
   &__best-from-ft-item-big-pic {
     position: absolute;
-    right: 0;
-    }
+    right: 0;}
   &__sign-up {
     background-color: #00496A;
     border: 1px solid white;
     border-radius: 7px;
     text-align: center;
     margin: auto;
-    width: 400px;}
+    padding: 15px 0 15px 0;
+    width: 550px;}
   &__sign-up-text {
     color: white;
     font-weight: bold;
@@ -119,15 +109,76 @@
   @include oGridRespondTo(M) {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-  }
-}
+    transform: translateY(-50%);}}
+
 .horizontally-centered {
   display: inline-block;}
 
 .text-box {
-  border: 2px solid red;
-}
-.__web-inspector-hide-shortcut__, .__web-inspector-hide-shortcut__ *, .__web-inspector-hidebefore-shortcut__::before, .__web-inspector-hideafter-shortcut__::after {
-    visibility: hidden !important;
+  border: 2px solid red;}
+
+.thin-container {
+  padding: 0px;}
+
+.overlapping-images {
+  position: relative;
+  height: 217px;
+  width: 435px;
+  &__hind-img {
+    position: absolute;
+    right: 0;}
+  &__fore-img {
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+    bottom: 0;}}
+
+.promo-unit-msg__best-from-ft-item-overlapping-images.overlapping-images {
+  position: absolute;
+  right: 50px;
+  top:50%;
+  transform: translateY(-50%);
+
+  @include oGridRespondTo($until: L) {
+    //background-color: red;
+    width: 310px;
+    height: 165px;
+    right: 15px;
+    .overlapping-images__hind-img {
+      width: 245px;
+    }
+    .overlapping-images__fore-img {
+      height: 86px;
+      width: 156px;
+    }
+  }
+
+  /*
+  @include oGridRespondTo(S) {
+    background-color: green;
+    width: 500px;
+    .overlapping-images__hind-img {
+      width: 10px;
+      height: 10px;}}
+  @include oGridRespondTo(M) {
+    background-color: yellow;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);}
+  @include oGridRespondTo(L) {
+    position: absolute;
+    right: 200px;
+    background-color: red;
+    width: 500px;
+    .overlapping-images__hind-img {
+      position: absolute;
+      right: 0;
+    }
+    .overlapping-images__fore-img {
+      position: absolute;
+      bottom: 40px;
+      left: 0;
+      bottom: 0;}
+  }
+*/
 }
